--- a/index.html
+++ b/index.html
@@ -27,7 +27,27 @@
     <div class="container">
       <!-- start header -->
 
-      <header class="header"></header>
+      <header class="header">
+
+        <div class="header__inner">
+          <div class="header__inner__slider header__inner__slider--one"> 
+            <p class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+            <p class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+            <p class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+            <p class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+            <p class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+          </div>
+          
+          <div class="header__inner__slider header__inner__slider--two">
+            <p  class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+            <p  class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+            <p  class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+            <p  class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+            <p  class="header__inner__slider__text">テキストテキストテキストテキストテキスト</p>
+          </div>
+
+        </div>
+      </header>
 
       <!-- start main -->
       <main class="main">
