--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
         <section class="game">
           <div class="game__inner">
             <div class="game__rule__container">
+              <span class="game__rule__chalk__1"></span>
+              <span class="game__rule__chalk__2"></span>
+              <span class="game__rule__eraser__1"></span>
+              <span class="game__rule__eraser__2"></span>
               <ul class="game__rule__list">
-                <li class="geme__rule__item"></li>
+                <li class="game__rule__item"></li>
               </ul>
             </div>
             <div class="game__start__container">
