--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </ul>
               </div>
               <div class="game__start-display__container">
-                <h1 class="game__title">コミもく</h1>
+                <h1 class="game__title game__start-display__title">コミもく</h1>
                 <p class="game__text">ニックネームを入力してね！</p>
                 <input
                   type="text"
@@ -98,7 +98,37 @@
             <!-- end start game__start-display -->
 
             <!-- start game__theme-display -->
-            <div class="game__theme-display"></div>
+            <div class="game__theme-display">
+              <h1 class="game__title game__theme-display__title">コミもく</h1>
+              <p class="game__text">お題を入力してね！</p>
+              <div class="game__theme-display__input__container">
+                <input
+                  type="text"
+                  class="game__input game__theme-display__input"
+                />
+                <input
+                  type="text"
+                  class="game__input game__theme-display__input"
+                />
+                <input
+                  type="text"
+                  class="game__input game__theme-display__input"
+                />
+                <input
+                  type="text"
+                  class="game__input game__theme-display__input"
+                />
+                <input
+                  type="text"
+                  class="game__input game__theme-display__input"
+                />
+                <input
+                  type="text"
+                  class="game__input game__theme-display__input"
+                />
+              </div>
+              <button class="game__button">スタート</button>
+            </div>
             <!-- end game__theme-display -->
 
             <!-- start game__load-display -->
