--- a/index.html
+++ b/index.html
@@ -30,38 +30,38 @@
       <header class="header">
         <div class="header__inner">
           <div class="header__inner__slider header__inner__slider--one">
-            <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+            <p class="header__inner__slider__text header__inner__slider__text-title">
+              過去の名言集
             </p>
             <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+              やまとラーメン好きってわけではないのか
             </p>
             <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+              寝不足で草
             </p>
             <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+              ステーキ美味しいよね！マッスルマッスル
             </p>
             <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+              まりじん
             </p>
           </div>
 
           <div class="header__inner__slider header__inner__slider--two">
-            <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+            <p class="header__inner__slider__text header__inner__slider__text-title">
+              過去の名言集
             </p>
             <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+              やまとラーメン好きってわけではないのか
             </p>
             <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+              寝不足で草
             </p>
             <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+              ステーキ美味しいよね！マッスルマッスル
             </p>
             <p class="header__inner__slider__text">
-              テキストテキストテキストテキストテキスト
+              まりじん
             </p>
           </div>
         </div>
