--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section class="game">
           <div class="game__inner">
             <!-- start game__start-display -->
-            <div class="game__start-display">
+            <div class="game__start-display" id="start-display">
               <div class="game__blackboard__container">
                 <span class="game__blackboard__chalk__1"></span>
                 <span class="game__blackboard__chalk__2"></span>
@@ -90,7 +90,7 @@
                   type="text"
                   class="game__input game__start-display__input"
                 />
-                <button class="game__button game__start__button">
+                <button class="game__button game__start__button" id="start-display-button">
                   スタート
                 </button>
               </div>
@@ -98,7 +98,7 @@
             <!-- end start game__start-display -->
 
             <!-- start game__theme-display -->
-            <div class="game__theme-display">
+            <div class="game__theme-display js-none" id="theme-display">
               <div class="game__theme-display__head">
                 <h1 class="game__title game__theme-display__title">コミもく</h1>
                 <div class="game__theme-display--return" id="return">やり直す</div>
@@ -130,7 +130,7 @@
                   class="game__input game__theme-display__input"
                 />
               </div>
-              <button class="game__button">スタート</button>
+              <button class="game__button" id="theme-display-button">スタート</button>
             </div>
             <!-- end game__theme-display -->
 
@@ -139,7 +139,7 @@
             <!-- end game__load-display -->
 
             <!-- start game__play-display -->
-            <div class="game__play-display">
+            <div class="game__play-display js-none" id="play-display">
               <div class="game__play-display__head">
                 <h1 class="game__title game__play-display__title">コミもく</h1>
                 <div class="game__play-display--finish" id="finish">終了する</div>
