--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
                 <span class="game__blackboard__chalk__2"></span>
                 <span class="game__blackboard__eraser__1"></span>
                 <span class="game__blackboard__eraser__2"></span>
-                <ul class="game__blackboard__list">
-                  <li class="game__blackboard__item"></li>
-                </ul>
+                <button class="game__blackboard__btn">約束事を<br>確認する</button>
               </div>
               <div class="game__start-display__container">
                 <h1 class="game__title game__start-display__title">コミもく</h1>
