--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
       <!-- start header -->
 
       <header class="header">
+        <h2 class="header__title">過去の名言</h2>
         <div class="header__inner">
           <div class="header__inner__slider header__inner__slider--one">
-            <p class="header__inner__slider__text header__inner__slider__text-title">
-              過去の名言集
+            <p class="header__inner__slider__text">
+              やまとラーメン好きってわけではないのか
             </p>
             <p class="header__inner__slider__text">
               やまとラーメン好きってわけではないのか
@@ -48,8 +49,8 @@
           </div>
 
           <div class="header__inner__slider header__inner__slider--two">
-            <p class="header__inner__slider__text header__inner__slider__text-title">
-              過去の名言集
+            <p class="header__inner__slider__text">
+              やまとラーメン好きってわけではないのか
             </p>
             <p class="header__inner__slider__text">
               やまとラーメン好きってわけではないのか
