--- a/index.html
+++ b/index.html
@@ -30,39 +30,35 @@
       <header class="header">
         <div class="header__inner">
           <div class="header__inner__slider header__inner__slider--one">
-            <p class="header__inner__slider__text header__inner__slider__text-title">
+            <p
+              class="header__inner__slider__text header__inner__slider__text-title"
+            >
               過去の名言集
             </p>
             <p class="header__inner__slider__text">
               やまとラーメン好きってわけではないのか
             </p>
-            <p class="header__inner__slider__text">
-              寝不足で草
-            </p>
+            <p class="header__inner__slider__text">寝不足で草</p>
             <p class="header__inner__slider__text">
               ステーキ美味しいよね！マッスルマッスル
             </p>
-            <p class="header__inner__slider__text">
-              まりじん
-            </p>
+            <p class="header__inner__slider__text">まりじん</p>
           </div>
 
           <div class="header__inner__slider header__inner__slider--two">
-            <p class="header__inner__slider__text header__inner__slider__text-title">
+            <p
+              class="header__inner__slider__text header__inner__slider__text-title"
+            >
               過去の名言集
             </p>
             <p class="header__inner__slider__text">
               やまとラーメン好きってわけではないのか
             </p>
-            <p class="header__inner__slider__text">
-              寝不足で草
-            </p>
+            <p class="header__inner__slider__text">寝不足で草</p>
             <p class="header__inner__slider__text">
               ステーキ美味しいよね！マッスルマッスル
             </p>
-            <p class="header__inner__slider__text">
-              まりじん
-            </p>
+            <p class="header__inner__slider__text">まりじん</p>
           </div>
         </div>
       </header>
@@ -79,16 +75,21 @@
                 <span class="game__blackboard__chalk__2"></span>
                 <span class="game__blackboard__eraser__1"></span>
                 <span class="game__blackboard__eraser__2"></span>
-                <button class="game__blackboard__btn">約束事を<br>確認する</button>
+                <button class="game__blackboard__btn">
+                  約束事を<br />確認する
+                </button>
               </div>
               <div class="game__start-display__container">
                 <h1 class="game__title game__start-display__title">コミもく</h1>
-                <p class="game__text">ニックネームを入力してね！</p>
+                <p class="game__text">名前を入力してね！</p>
                 <input
                   type="text"
                   class="game__input game__start-display__input"
                 />
-                <button class="game__button game__start__button" id="start-display-button">
+                <button
+                  class="game__button game__start__button"
+                  id="start-display-button"
+                >
                   スタート
                 </button>
               </div>
@@ -99,7 +100,9 @@
             <div class="game__theme-display js-none" id="theme-display">
               <div class="game__theme-display__head">
                 <h1 class="game__title game__theme-display__title">コミもく</h1>
-                <div class="game__theme-display--return" id="return">やり直す</div>
+                <div class="game__theme-display--return" id="return">
+                  やり直す
+                </div>
               </div>
               <p class="game__text">お題を入力してね！</p>
               <div class="game__theme-display__input__container">
@@ -128,7 +131,9 @@
                   class="game__input game__theme-display__input"
                 />
               </div>
-              <button class="game__button" id="theme-display-button">スタート</button>
+              <button class="game__button" id="theme-display-button">
+                スタート
+              </button>
             </div>
             <!-- end game__theme-display -->
 
@@ -140,22 +145,15 @@
             <div class="game__play-display js-none" id="play-display">
               <div class="game__play-display__head">
                 <h1 class="game__title game__play-display__title">コミもく</h1>
-                <div class="game__play-display--finish" id="finish">終了する</div>
-            </div>
-            <div class="game__play-display__slot">
-              <div class="game__play-display__slot__left">
-                <p id="slot-left">ダミーテキスト</p>
+                <div class="game__play-display--finish" id="finish">
+                  終了する
+                </div>
               </div>
-              <div class="game__play-display__slot__right">
-                <p id="slot-right">ダミーテキスト</p>
-              </div>
-            </div>
-            <div class="game__play-display__button">
-              <div class="game__play-display__button__left">
-                <button>回す</button>
-              </div>
-              <div class="game__play-display__button__right">
-                <button>回す</button>
+              <div class="game__play-display__slot">
+                <button class="game__play-display__slot__spin" id="spin">
+                  SPIN
+                </button>
+                <div class="game__play-display__slot__inner" id="slot"></div>
               </div>
             </div>
             <!-- end game__play-display -->
@@ -169,5 +167,6 @@
     </div>
     <!-- javascript -->
     <script src="./js/main.js"></script>
+    <script src="./js/game.js"></script>
   </body>
 </html>
