--- a/index.html
+++ b/index.html
@@ -74,15 +74,46 @@
           <div class="game__inner">
             <!-- start game__start-display -->
             <div class="game__start-display" id="start-display">
-              <div class="game__blackboard__container">
+              <div class="game__blackboard">
                 <span class="game__blackboard__chalk__1"></span>
                 <span class="game__blackboard__chalk__2"></span>
                 <span class="game__blackboard__eraser__1"></span>
                 <span class="game__blackboard__eraser__2"></span>
-                <ul class="game__blackboard__list">
-                  <li class="game__blackboard__item"></li>
-                </ul>
+                <div class="game__blackboard__container">
+                  <!-- <button id="game__modal__open" class="game__blackboard__btn">ルールの確認</button> -->
+                  <p class="game__blackboard__title">ルール説明</p>
+                  <div class="game__blackboard__rule">
+                    <p class="game__blackboard__rule__title">コミもくとは？</p>
+                    <p class="game__blackboard__rule__text">コミもく(コミュニケーションもくもく)は<span class="game__blackboard__rule__red">コミュニケーションをとって</span>、みんなと仲良くなることが目的だよ。</p>
+                    <p class="game__blackboard__rule__text">今まで関わったことがない人とも<span class="game__blackboard__rule__blue">話す機会</span>にしたい！</p>
+                    <p class="game__blackboard__rule__text">積極的に楽しもう！</p>
+                  </div>
+                  <div class="game__blackboard__rule">
+                    <p class="game__blackboard__rule__title">内容について</p>
+                    <p class="game__blackboard__rule__text">みんなに後で<span class="game__blackboard__rule__yellow">お題について考えて</span>もらうよ。</p>
+                    <p class="game__blackboard__rule__text">簡潔なお題<span class="game__blackboard__rule__red">(16文字以内のお題)</span>を考えよう！</p>
+                    <p class="game__blackboard__rule__text">その後は決まったお題について、<span class="game__blackboard__rule__blue">ディベート</span>したりしていくよ。</p>
+                  </div>
+                  <div class="game__blackboard__rule">
+                    <p class="game__blackboard__rule__title">今まで関わったことがない人とも<span class="game__blackboard__rule__yellow">仲良くなるチャンス</span>！</p>
+                    <p class="game__blackboard__rule">スタートボタンをクリックしよう！</p>
+                  </div>
+                  <span class="game__blackboard__rule__yellow"></span>
+                </div>
               </div>
+              <!-- <div id="game__modal" class="game__modal">
+                <div class="game__modal__content">
+                  <h1 class="game__modal__title">ルールの確認<span class="game__modal__close">&times;</span></h1>
+                  <div>
+                    <p>最初に自己紹介をしよう。</p>
+                    <p>みんなのことについて教えてね。</p>
+                    <p>自己開示しよう。</p>
+                    <p>楽しもう。</p>
+                    <p>人の話を傾聴しよう。</p>
+                    <p>ルールが入るよ。</p>
+                  </div>
+                </div>
+              </div> -->
               <div class="game__start-display__container">
                 <h1 class="game__title game__start-display__title">コミもく</h1>
                 <p class="game__text">ニックネームを入力してね！</p>
