--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                   やり直す
                 </div>
               </div>
-              <p class="game__text">お題を入力してね！</p>
+              <p class="game__text">お題を入力してね！(16文字以内)</p>
               <div class="game__theme-display__input__container">
                 <input
                   type="text"
-                  class="game__input game__theme-display__input"
+                  class="game__input game__theme-display__input" maxlength="16"
                 />
                 <input
                   type="text"
