ルール説明作成

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                   </div>
                   <span class="game__blackboard__rule__yellow"></span>
                 </div>
-              <div class="game__start-display__container">
+              </div>
+                <div class="game__start-display__container">
                 <h1 class="game__title game__start-display__title">コミもく</h1>
                 <p class="game__text">名前を入力してね！</p>
                 <input
