--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <div class="game__inner">
             <!-- start game__start-display -->
             <div class="game__start-display" id="start-display">
+              <div class="game__start-display__title__sp">コミもく</div>
               <div class="game__blackboard">
                 <span class="game__blackboard__chalk__1"></span>
                 <span class="game__blackboard__chalk__2"></span>
@@ -83,13 +84,14 @@
                     <p class="game__blackboard__rule__text">その後は決まったお題について、<span class="game__blackboard__rule__blue">ディベート</span>したりしていくよ。</p>
                   </div>
                   <div class="game__blackboard__rule">
-                    <p class="game__blackboard__rule__title">今まで関わったことがない人とも<span class="game__blackboard__rule__yellow">仲良くなるチャンス</span>！</p>
-                    <p class="game__blackboard__rule">スタートボタンをクリックしよう！</p>
+                    <p class="game__blackboard__rule__title">最後に</p>
+                    <p class="game__blackboard__rule__text">今まで関わったことがない人とも<span class="game__blackboard__rule__yellow">仲良くなるチャンス</span>！</p>
+                    <p class="game__blackboard__rule__text">スタートボタンをクリックしよう！</p>
                   </div>
                   <span class="game__blackboard__rule__yellow"></span>
                 </div>
               </div>
-                <div class="game__start-display__container">
+              <div class="game__start-display__container">
                 <h1 class="game__title game__start-display__title">コミもく</h1>
                 <p class="game__text">名前を入力してね！</p>
                 <input
@@ -97,7 +99,7 @@
                   class="game__input game__start-display__input"
                 />
                 <button
-                  class="game__button game__start__button"
+                  class="game__button game__start-display__button"
                   id="start-display-button"
                 >
                   スタート
