レスポンシブデザイン完成

--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
                     確定する
                   </button>
                 </div>
-                <p class="game__finish-display__text">
+                <p class="game__finish-display__text game__finish-display__reset">
                   今回のお題をリセットせずに続けますか？
                   <button class="game__finish-display__input__button">
                     リセットする
                   </button>
                 </p>
                 <button
-                  class="game__button game__finish__button"
+                  class="game__button game__finish-display__button"
                   id="finish-display-button"
                 >
                   トップに戻る
