過去の名言の機能を実装

--- a/index.html
+++ b/index.html
@@ -33,30 +33,12 @@
           <div
             class="header__inner__slider header__inner__slider--one"
             id="slider-one"
-          >
-            <!-- <p class="header__inner__slider__text">
-              やまとラーメン好きってわけではないのか
-            </p>
-            <p class="header__inner__slider__text">寝不足で草</p>
-            <p class="header__inner__slider__text">
-              ステーキ美味しいよね！マッスルマッスル
-            </p>
-            <p class="header__inner__slider__text">まりじん</p> -->
-          </div>
+          ></div>
 
           <div
             class="header__inner__slider header__inner__slider--two"
             id="slider-two"
-          >
-            <!-- <p class="header__inner__slider__text">
-              やまとラーメン好きってわけではないのか
-            </p>
-            <p class="header__inner__slider__text">寝不足で草</p>
-            <p class="header__inner__slider__text">
-              ステーキ美味しいよね！マッスルマッスル
-            </p>
-            <p class="header__inner__slider__text">まりじん</p> -->
-          </div>
+          ></div>
         </div>
       </header>
 
@@ -152,9 +134,7 @@
             <div class="game__theme-display" id="theme-display">
               <div class="game__theme-display__head">
                 <h1 class="game__title game__theme-display__title">コミもく</h1>
-                <div class="game__theme-display--return" id="return">
-                  やり直す
-                </div>
+                <div class="game__theme-display--return" id="return">戻る</div>
               </div>
               <p class="game__text">お題を入力してね！(16文字以内)</p>
               <div class="game__theme-display__input__container">
@@ -236,7 +216,10 @@
                     class="game__finish-display__input"
                     id="famous-quote-input"
                   />
-                  <button class="game__finish-display__input__button">
+                  <button
+                    class="game__finish-display__input__button"
+                    id="famous-quote-button"
+                  >
                     確定する
                   </button>
                 </div>
