お題入力画面修正

--- a/index.html
+++ b/index.html
@@ -150,28 +150,8 @@
               <div class="game__theme-display__input__container">
                 <input
                   type="text"
-                  class="game__input game__theme-display__input"
+                  class="game__input game__theme-display__input" id="game__theme-display__input"
                   maxlength="16"
-                />
-                <input
-                  type="text"
-                  class="game__input game__theme-display__input"
-                />
-                <input
-                  type="text"
-                  class="game__input game__theme-display__input"
-                />
-                <input
-                  type="text"
-                  class="game__input game__theme-display__input"
-                />
-                <input
-                  type="text"
-                  class="game__input game__theme-display__input"
-                />
-                <input
-                  type="text"
-                  class="game__input game__theme-display__input"
                 />
               </div>
               <button class="game__button" id="theme-display-button">
