--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
                 </div>
                 <h1 class="game__title game__theme-display__title">コミもく</h1>
               </div>
-              <p class="game__text">お題を入力してね！(16文字以内)</p>
+              <p class="game__text game__theme-display__text">
+                お題を入力してね！(16文字以内)
+              </p>
               <div class="game__theme-display__input__container">
                 <input
                   type="text"
